# marginalia

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/marginalia/: Cargo.toml
crates/marginalia-attach/: Cargo.toml
crates/marginalia-attach/src/: attacher.rs  lib.rs  map.rs
crates/marginalia-pretty/: Cargo.toml
crates/marginalia-pretty/src/: doc.rs  format.rs  lib.rs  render.rs
crates/marginalia/src/: classify.rs  lib.rs  span.rs
examples/calc/: Cargo.toml
examples/calc/examples/: sample.calc
examples/calc/src/: ast.rs  fmt.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop  tests.rs
src/: classify.rs  lexer.rs  lib.rs  span.rs  table.rs  trivia.rs
src/attach/: attacher.rs  map.rs  mod.rs
src/pretty/: doc.rs  format.rs  mod.rs  render.rs
