[package]
name = "marginalia-attach"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
description = "Attach trivia (comments, blank lines) collected by `marginalia` to AST nodes by span"

[dependencies]
marginalia = { workspace = true }

[lints]
workspace = true
