[package]
name = "marginalia-pretty"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
description = "Pretty-printer with trivia slots for `marginalia` pipelines"

[dependencies]
marginalia = { workspace = true }
marginalia-attach = { workspace = true }

[lints]
workspace = true
