[package]
name = "marginalia"
description = "Trivia-preserving lexer adapter for logos + lalrpop pipelines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lints]
workspace = true
