[package]
name = "marginalia"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
description = "Trivia-preserving lexer adapter for logos + lalrpop pipelines"

[lints]
workspace = true
