[package]
name = "marginalia-calc"
version.workspace = true
authors.workspace = true
build = "build.rs"
edition.workspace = true
license.workspace = true
publish = false
description = "Tiny calculator formatter demonstrating marginalia end-to-end"

[lib]
name = "calc"
path = "src/lib.rs"

[[bin]]
name = "calcfmt"
path = "src/main.rs"

[dependencies]
lalrpop-util = { workspace = true }
logos = { workspace = true }
marginalia = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }

[lints]
workspace = true
